syntax = "proto3";
package auth;

option go_package = "./auth";

message UserPayload {
  string username = 1;
  bool is_admin = 2;
  int64 expires_at = 3;
  int64 created_at = 4;
}
